fix: 组件模块化

--- a/vite-project/src/i18n/lang/en.json
+++ b/vite-project/src/i18n/lang/en.json
@@ -5,6 +5,10 @@
     "ch": "Chinese",
     "en": "English"
   },
+  "vue": {
+    "props": "component props",
+    "sendMessage": "send Message"
+  },
   "hello": "hello, world!",
   "createUser": "create User"
 } 
